# airflow

./: main.py  pyproject.toml
dags/: minha_primieira_dag.py  primeiradag.py  quartadag.py  quintadag.py  segundadag.py  terceiradag.py
frontend/: gus_pipe.py
frontend/pipeline/: pipeline.py
