[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Gustavo Paulino <Guh.Naasc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "^2.10.4"
loguru = "^0.7.3"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
